Changelog for logilab database package
======================================

--
    * [fti] exclude numbers from stop words in fti parser (closes: #69471)

2011-06-09  --  1.6.0
    * new CAST function

    * new methods on db_helpers to support regexp-based pattern
      matching, using a REGEXP operator

    * support BigInt mapping

    * added sql_restart_sequence to dbhelper classes

    * tz datetime fix (don't return datetime with tz info set )

    * use logging and not print statements (closes #64792)



2011-04-01  --  1.5.0
    * fix deprecation warning and depend on common 0.55.2

    * TZ datetime and time support



2011-03-28  --  1.4.0
    * abstract OFFSET LIMIT support (incl. support for MSSQL)



2011-01-13  --  1.3.2
    * fix index dropping on sql server 2005

    * new sql_rename_table function on db helper

    * sqlite: fix restore command



2010-10-11  --  1.3.1
    * nice repr() on dbhelper

    * fix binary column value conversion by dbhelper.binary_value



2010-09-23  --  1.3.0
    * methods to create/remove multi-columns unique index updated to
      return a list of sql statements and renamed to
      sqls_create_multicol_unique_index / sqls_drop_multicol_unique_index.
      This has been necessary to properly implements them with sql server,
      which doesn't like such kind of index w/ NULL values.



2010-09-10  --  1.2.0
    * new methods to create/remove multi-columns unique index:
      sql_create_multicol_unique_index / sql_drop_multicol_unique_index

    * add support for sql ABS() function



2010-07-05  --  1.1.0
    * change fti api to allow support for ranking control when using postgres



2010-07-02  --  1.0.5
    * provide new change_col_type / set_null_allowed method on advanced
      helpers, similar to sql_change_col_type / sql_set_null_allowed but
      taking a cursor as argument and actually doing necessary stuff. You
      should prefer those method to the sql_* ones since in some case we're